deploy/softserve/kubernetes.yaml
kind: Namespace
metadata:
  name: softserve
  labels:
    app.kubernetes.io/part-of: softserve
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: softserve
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/softserve/*.cue"
apiVersion: v1
---
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
      targetPort: git-http
  selector:
    app.kubernetes.io/name: softserve
kind: Service
apiVersion: v1
metadata:
  name: softserve
  namespace: softserve
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/softserve/*.cue"
  labels:
    app.kubernetes.io/part-of: softserve
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: softserve
---
kind: Deployment
metadata:
  name: softserve
  namespace: softserve
  labels:
    app.kubernetes.io/part-of: softserve
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: softserve
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/softserve/*.cue"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: softserve
  template:
    metadata:
      labels:
        app.kubernetes.io/name: softserve
    spec:
      containers:
        - image: ghcr.io/charmbracelet/soft-serve:v0.7.6
          name: softserve
          ports:
            - containerPort: 9418
              name: git
            - containerPort: 23231
              hostPort: 23231
              name: git-ssh
            - containerPort: 23232
              name: git-http
            - containerPort: 23233
              name: stats
          volumeMounts:
            - mountPath: /soft-serve
              name: data
      volumes:
        - hostPath:
            path: /opt/volumes/softserve
          name: data
      enableServiceLinks: false
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
apiVersion: apps/v1
---
kind: HTTPRoute
spec:
  hostnames:
    - softserve.liao.dev
  parentRefs:
    - name: http-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: softserve
          port: 80
metadata:
  name: softserve
  namespace: softserve
  labels:
    app.kubernetes.io/part-of: softserve
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: softserve
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/softserve/*.cue"
apiVersion: gateway.networking.k8s.io/v1
